--- a/SimpleTwitchTTS/Form1.en-US.resx
+++ b/SimpleTwitchTTS/Form1.en-US.resx
@@ -118,8 +118,50 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonTwitchConnect.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 28</value>
+  </data>
+  <data name="textBoxTwitchApi.Location" type="System.Drawing.Point, System.Drawing">
+    <value>73, 28</value>
+  </data>
+  <data name="textBoxTwitchNick.Location" type="System.Drawing.Point, System.Drawing">
+    <value>73, 57</value>
+  </data>
+  <data name="linkLabelTwitchApi.Location" type="System.Drawing.Point, System.Drawing">
+    <value>179, 32</value>
+  </data>
+  <data name="labelNickOfChannelToConnect.Location" type="System.Drawing.Point, System.Drawing">
+    <value>179, 57</value>
+  </data>
+  <data name="textBoxDoNotTtsIfStartWith.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 534</value>
+  </data>
+  <data name="textBoxDoNotTtsIfStartWith.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 23</value>
+  </data>
+  <data name="textBoxViewerSkipCurrentTtsMessage.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 456</value>
+  </data>
+  <data name="textBoxViewerSkipCurrentTtsMessage.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 23</value>
+  </data>
+  <data name="textBoxViewerSkipAllQueueMessage.Location" type="System.Drawing.Point, System.Drawing">
+    <value>135, 456</value>
+  </data>
+  <data name="textBoxTestTts.Location" type="System.Drawing.Point, System.Drawing">
+    <value>135, 512</value>
+  </data>
+  <data name="textBoxTestTts.Size" type="System.Drawing.Size, System.Drawing">
+    <value>131, 23</value>
+  </data>
+  <data name="textBoxProfileAdd.Location" type="System.Drawing.Point, System.Drawing">
+    <value>304, 63</value>
+  </data>
+  <data name="comboBoxProfileSelect.Location" type="System.Drawing.Point, System.Drawing">
+    <value>304, 33</value>
+  </data>
   <data name="labelConnectionStatus.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 38</value>
+    <value>7, 54</value>
   </data>
   <data name="labelConnectionStatus.MaximumSize" type="System.Drawing.Size, System.Drawing">
     <value>70, 0</value>
@@ -130,11 +172,95 @@
   <data name="labelConnectionStatus.Text" xml:space="preserve">
     <value>Did not connected</value>
   </data>
+  <data name="checkBoxClearEmoji.Location" type="System.Drawing.Point, System.Drawing">
+    <value>73, 118</value>
+  </data>
+  <data name="comboBoxInstalledVoices.Location" type="System.Drawing.Point, System.Drawing">
+    <value>73, 86</value>
+  </data>
+  <data name="trackBarTtsVolume.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 140</value>
+  </data>
+  <data name="trackBarTtsSpeed.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 191</value>
+  </data>
+  <data name="labelTtsVolume.Location" type="System.Drawing.Point, System.Drawing">
+    <value>179, 140</value>
+  </data>
+  <data name="labelTtsSpeed.Location" type="System.Drawing.Point, System.Drawing">
+    <value>179, 191</value>
+  </data>
+  <data name="labelBlackList.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 221</value>
+  </data>
+  <data name="textBoxBlackList.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 242</value>
+  </data>
+  <data name="listBoxBlackList.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 271</value>
+  </data>
+  <data name="buttonAddToBlackList.Location" type="System.Drawing.Point, System.Drawing">
+    <value>113, 241</value>
+  </data>
+  <data name="buttonRemoveFromBlackList.Location" type="System.Drawing.Point, System.Drawing">
+    <value>113, 270</value>
+  </data>
+  <data name="labelTtsVolumeName.Location" type="System.Drawing.Point, System.Drawing">
+    <value>200, 140</value>
+  </data>
+  <data name="labelTtsSpeedName.Location" type="System.Drawing.Point, System.Drawing">
+    <value>200, 191</value>
+  </data>
+  <data name="labelSkipMessage.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 339</value>
+  </data>
+  <data name="buttonSkipCurrentMessage.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 357</value>
+  </data>
+  <data name="buttonClearEntireQueue.Location" type="System.Drawing.Point, System.Drawing">
+    <value>113, 357</value>
+  </data>
+  <data name="labelAllowViewerToSkip.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 383</value>
+  </data>
+  <data name="labelViewerSkipCurrent.Location" type="System.Drawing.Point, System.Drawing">
+    <value>73, 407</value>
+  </data>
+  <data name="labelViewerSkipCurrentMessage.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 438</value>
+  </data>
+  <data name="labelViewerSkipAllQueue.Location" type="System.Drawing.Point, System.Drawing">
+    <value>135, 438</value>
+  </data>
+  <data name="labelDoNotTtsIfStartWith.Location" type="System.Drawing.Point, System.Drawing">
+    <value>7, 516</value>
+  </data>
+  <data name="labelTtsTest.Location" type="System.Drawing.Point, System.Drawing">
+    <value>135, 494</value>
+  </data>
+  <data name="buttonTestTts.Location" type="System.Drawing.Point, System.Drawing">
+    <value>135, 538</value>
+  </data>
+  <data name="buttonProfileLoad.Location" type="System.Drawing.Point, System.Drawing">
+    <value>410, 32</value>
+  </data>
+  <data name="buttonProfileDeleteEN.Location" type="System.Drawing.Point, System.Drawing">
+    <value>410, 63</value>
+  </data>
   <data name="buttonProfileDeleteEN.Text" xml:space="preserve">
     <value>Delete</value>
   </data>
+  <data name="labelProfileAdd.Location" type="System.Drawing.Point, System.Drawing">
+    <value>252, 32</value>
+  </data>
+  <data name="labelProfileDelete.Location" type="System.Drawing.Point, System.Drawing">
+    <value>249, 62</value>
+  </data>
   <data name="buttonLanguageChange.Location" type="System.Drawing.Point, System.Drawing">
-    <value>418, 522</value>
+    <value>413, 570</value>
+  </data>
+  <data name="buttonOpenFolderRU.Location" type="System.Drawing.Point, System.Drawing">
+    <value>304, 121</value>
   </data>
   <data name="buttonOpenFolderRU.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 23</value>
@@ -142,10 +268,32 @@
   <data name="buttonOpenFolderRU.Text" xml:space="preserve">
     <value>Open folder</value>
   </data>
+  <data name="buttonProfileSave.Location" type="System.Drawing.Point, System.Drawing">
+    <value>304, 92</value>
+  </data>
   <data name="buttonProfileSave.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 23</value>
   </data>
   <data name="buttonProfileSave.Text" xml:space="preserve">
     <value>Save</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="buttonTestTtsSkip.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="buttonTestTtsSkip.Location" type="System.Drawing.Point, System.Drawing">
+    <value>185, 538</value>
+  </data>
+  <data name="buttonTestTtsSkip.Size" type="System.Drawing.Size, System.Drawing">
+    <value>81, 23</value>
+  </data>
+  <data name="buttonTestTtsSkip.Text" xml:space="preserve">
+    <value>Skip</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>500, 605</value>
+  </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>SimpleTwitchTts v1.0.2.0</value>
   </data>
 </root>
