--- a/SimpleTwitchTTS/Form1.en-US.resx
+++ b/SimpleTwitchTTS/Form1.en-US.resx
@@ -193,8 +193,14 @@
   <data name="labelBlackList.Location" type="System.Drawing.Point, System.Drawing">
     <value>7, 256</value>
   </data>
+  <data name="labelBlackList.Size" type="System.Drawing.Size, System.Drawing">
+    <value>74, 15</value>
+  </data>
   <data name="textBoxBlackList.Location" type="System.Drawing.Point, System.Drawing">
     <value>7, 277</value>
+  </data>
+  <data name="textBoxBlackList.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 23</value>
   </data>
   <data name="listBoxBlackList.Location" type="System.Drawing.Point, System.Drawing">
     <value>7, 306</value>
@@ -248,6 +254,10 @@
   <data name="buttonProfileDeleteEN.Location" type="System.Drawing.Point, System.Drawing">
     <value>417, 62</value>
   </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="buttonProfileDeleteEN.TabIndex" type="System.Int32, mscorlib">
+    <value>72</value>
+  </data>
   <data name="buttonProfileDeleteEN.Text" xml:space="preserve">
     <value>Delete</value>
   </data>
@@ -293,7 +303,6 @@
   <data name="buttonTestTtsSkip.Text" xml:space="preserve">
     <value>Skip</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="labelTypeOfMessageTts.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -451,6 +460,6 @@
     <value>689, 507</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>SimpleTwitchTts v1.0.2.0</value>
+    <value>SimpleTwitchTts v1.0.3.2</value>
   </data>
 </root>
